--- a/styles/Experience.module.css
+++ b/styles/Experience.module.css
@@ -128,7 +128,7 @@
     margin-bottom: 0;
     margin-top: 120px;
     margin-top: 60px;
-    overflow-x: hidden;
+    overflow: hidden;
   }
   .container h2 {
     font-size: 22.5vw;
