--- a/styles/Features.module.css
+++ b/styles/Features.module.css
@@ -254,6 +254,7 @@
 @media (max-width: 800px) {
   .container {
     margin-top: 80px;
+    overflow: hidden;
   }
   .platform {
     width: 100%;
