--- a/styles/Intro.module.css
+++ b/styles/Intro.module.css
@@ -81,12 +81,14 @@
   .container {
     overflow: hidden;
     position: relative;
+    width: unset;
   }
   .container h1 {
     margin-top: 10vh;
   }
   .wrapper {
     overflow: hidden;
+    width: unset;
   }
   .keyImage {
     position: absolute;
